Split "manage-field" styles to fix overlap

--- a/ui/js/dfv/src/admin/edit-pod/edit-pod.scss
+++ b/ui/js/dfv/src/admin/edit-pod/edit-pod.scss
@@ -15,13 +15,13 @@
 	}
 }
 
-.pods-manage-field .pods-dfv-container {
+.pods-edit-pod-manage-field .pods-dfv-container {
 	display: block;
 	max-width: 45em;
 	width: 65%;
 }
 
-.pods-manage-field .pods-dfv-container-wysiwyg,
-.pods-manage-field .pods-dfv-container-code {
+.pods-edit-pod-manage-field .pods-dfv-container-wysiwyg,
+.pods-edit-pod-manage-field .pods-dfv-container-code {
 	width: 100%;
 }
